--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -2,6 +2,7 @@
     color: white;
     background-color: #6F1DF4;
     background-image: url('/assets/elegant.png');
+    margin-top: 0;
 }
 .gallery__content {
     max-width: 1200px;
